CKA/yaml_files/pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  volumes:
    - name: local-pod-pvc
      persistentVolumeClaim:
        claimName: local-pvc #PVC만 지정하고, PV는 지정하지 않음. 
  containers:
    - name: nginx
      image: nginx:alpine
      volumeMounts:
        - mountPath: /var/www/html
          name: local-pod-pvc
